--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,8 @@ body {
 .header._header-scroll {
   position: fixed;
   padding-top: 0;
-  padding-bottom: 0
+  padding-bottom: 0;
+  background-color: rgba(0,0,0,.8784313725)
 }
 .header__container {
   position: relative;
@@ -254,6 +255,27 @@ body {
   -webkit-transform: rotate(4deg);
   transform: rotate(4deg)
 }
+.img-decor {
+  display: inline-block;
+  position: absolute;
+  top: -15%;
+  left: 75%;
+  z-index: 10
+}
+.img-decor--right {
+  top: -15%;
+  left: 25%
+}
+.subtitle {
+  text-shadow: 0 8px 0 #000;
+  -webkit-text-stroke-width: 9;
+  -webkit-text-stroke-color: #000;
+  font-family: Ahsing;
+  display: inline-block;
+  line-height: 1.3;
+  padding-left: .9375rem;
+  padding-right: .9375rem
+}
 .hero__container {
   display: grid;
   align-items: start;
@@ -277,8 +299,8 @@ body {
   font-weight: 400
 }
 .hero__title-bone {
-  top: 22%;
-  right: -.9375rem;
+  top: 15%;
+  right: -2.1875rem;
   position: absolute
 }
 .hero__bone-decor {
@@ -391,12 +413,148 @@ body {
   line-height: 140%;
   margin-top: -3.125rem
 }
+.buy__container {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr .2fr;
+  align-items: center;
+  position: relative
+}
+.buy-list__list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-content: center;
+  align-self: center
+}
+.item-buy {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5625rem;
+  color: #000;
+  background-color: #fff;
+  border-radius: 1.9375rem;
+  border: 5px solid #000;
+  box-shadow: -11px -9px 4px 0 rgba(0,0,0,.25) inset,7.667px 7.667px 0 0 #000
+}
+.item-buy__title {
+  font-family: "Work Sans";
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.4
+}
+.item-buy__icon {
+  aspect-ratio: 1/1;
+  position: absolute;
+  right: 8%;
+  top: -8%
+}
+.item-buy__number {
+  transition: all .5s;
+  left: 8%;
+  top: -8%;
+  position: absolute
+}
+.item-buy__number-icon {
+  aspect-ratio: 1/1
+}
+.item-buy__item-buy__decor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%
+}
+.item-buy__swap-title {
+  color: #000;
+  opacity: .5;
+  font-family: "Work Sans";
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 1.4
+}
+.item-buy__swap-text {
+  color: #000;
+  opacity: .5;
+  font-family: "Work Sans";
+  font-weight: 600;
+  line-height: 1.4
+}
+.item-buy__swap-text img {
+  max-width: 1.25rem
+}
+.item-buy__swap-copy {
+  aspect-ratio: 1/1
+}
+.booswap__container {
+  position: relative;
+  display: flex;
+  justify-content: flex-end
+}
+.booswap__title {
+  text-align: center;
+  justify-content: center;
+  align-items: center
+}
+.booswap__img-content {
+  max-width: 37.3125rem;
+  aspect-ratio: 597/959;
+  margin: auto
+}
+.booswap img:nth-child(1) {
+  position: relative;
+  z-index: 5;
+  border-radius: 1.875rem;
+  overflow: hidden
+}
+.booswap img:nth-child(2) {
+  aspect-ratio: 268/239;
+  position: absolute;
+  top: -20%;
+  left: 12%;
+  z-index: 6
+}
+.booswap img:nth-child(3) {
+  aspect-ratio: 1/1;
+  position: absolute;
+  top: -30%;
+  right: 15%
+}
+.booswap img:nth-child(4) {
+  aspect-ratio: 1/1;
+  position: absolute;
+  bottom: -45%;
+  left: 17%
+}
+.booswap img:nth-child(5) {
+  aspect-ratio: 270/121;
+  position: absolute;
+  bottom: -20%;
+  right: 12%;
+  z-index: 6
+}
+@media (min-width:47.99875em) {
+  .buy {
+    background-image: url(img/lines.svg);
+    background-repeat: no-repeat;
+    background-position: center
+  }
+}
 @media (min-width:77.5em) {
+  .strip--top-left {
+    margin-top: -7.5rem
+  }
   .what__img {
     padding-top: 6.875rem
   }
   .what__label {
     font-size: 3.6875rem
+  }
+  .buy-list__list {
+    gap: 12.5rem
+  }
+  .item-buy__swap-text {
+    font-size: 1.25rem
   }
 }
 @media (min-width:79.375em) {
@@ -418,6 +576,24 @@ body {
   }
   .page__what {
     padding-bottom: 4.6875rem
+  }
+  .page__buy {
+    padding-bottom: 4.6875rem
+  }
+  .page__booswap {
+    padding-top: 4.6875rem
+  }
+  .page__booswap {
+    padding-bottom: 4.6875rem
+  }
+  .strip--top-left {
+    margin-bottom: 6.25rem
+  }
+  .img-decor {
+    max-width: 15.625rem
+  }
+  .subtitle {
+    font-size: 7.75rem
   }
   .hero__container {
     column-gup: 6.25rem
@@ -464,7 +640,7 @@ body {
     margin-top: -2.5rem
   }
   .what__decor {
-    margin-right: -1.5625rem
+    margin-right: -2.1875rem
   }
   .what__image-decor {
     width: 8.75rem
@@ -490,6 +666,48 @@ body {
   .what__text {
     padding-right: 2.5rem
   }
+  .buy-list {
+    padding-top: 6.25rem
+  }
+  .item-buy {
+    padding-top: 5.3125rem
+  }
+  .item-buy {
+    padding-bottom: 4.6875rem
+  }
+  .item-buy {
+    padding-left: 2.1875rem
+  }
+  .item-buy {
+    padding-right: 2.1875rem
+  }
+  .item-buy__icon {
+    max-width: 9.6875rem
+  }
+  .item-buy__number {
+    max-width: 6.25rem
+  }
+  .booswap__strip {
+    margin-bottom: 7.5rem
+  }
+  .booswap {
+    margin-top: 3.4375rem
+  }
+  .booswap {
+    margin-bottom: 3.4375rem
+  }
+  .booswap img:nth-child(2) {
+    max-width: 16.875rem
+  }
+  .booswap img:nth-child(3) {
+    max-width: 16.875rem
+  }
+  .booswap img:nth-child(4) {
+    max-width: 16.875rem
+  }
+  .booswap img:nth-child(5) {
+    max-width: 16.875rem
+  }
 }
 @media (max-width:20em) {
   .page__hero {
@@ -500,6 +718,24 @@ body {
   }
   .page__what {
     padding-bottom: 1.875rem
+  }
+  .page__buy {
+    padding-bottom: 1.875rem
+  }
+  .page__booswap {
+    padding-top: 1.875rem
+  }
+  .page__booswap {
+    padding-bottom: 1.875rem
+  }
+  .strip--top-left {
+    margin-bottom: 3.125rem
+  }
+  .img-decor {
+    max-width: 3.125rem
+  }
+  .subtitle {
+    font-size: 2.25rem
   }
   .hero__container {
     column-gup: 3.125rem
@@ -572,6 +808,48 @@ body {
   .what__text {
     padding-right: .625rem
   }
+  .buy-list {
+    padding-top: 2.1875rem
+  }
+  .item-buy {
+    padding-top: 3.125rem
+  }
+  .item-buy {
+    padding-bottom: 1.875rem
+  }
+  .item-buy {
+    padding-left: .9375rem
+  }
+  .item-buy {
+    padding-right: .9375rem
+  }
+  .item-buy__icon {
+    max-width: 4.6875rem
+  }
+  .item-buy__number {
+    max-width: 4.6875rem
+  }
+  .booswap__strip {
+    margin-bottom: 1.875rem
+  }
+  .booswap {
+    margin-top: 4.6875rem
+  }
+  .booswap {
+    margin-bottom: 4.6875rem
+  }
+  .booswap img:nth-child(2) {
+    max-width: 4.6875rem
+  }
+  .booswap img:nth-child(3) {
+    max-width: 4.6875rem
+  }
+  .booswap img:nth-child(4) {
+    max-width: 4.6875rem
+  }
+  .booswap img:nth-child(5) {
+    max-width: 4.6875rem
+  }
 }
 @media (max-width:112.5em) {
   .hero__decor {
@@ -589,6 +867,23 @@ body {
   .social__list {
     justify-content: center
   }
+  .booswap img:nth-child(2) {
+    display: none
+  }
+  .booswap img:nth-child(3) {
+    display: none
+  }
+  .booswap img:nth-child(4) {
+    display: none
+  }
+  .booswap img:nth-child(5) {
+    display: none
+  }
+}
+@media (max-width:61.24875em) {
+  .strip--top-left {
+    margin-top: .0000000625rem
+  }
 }
 @media (max-width:61.25em) {
   .hero__container {
@@ -596,7 +891,8 @@ body {
     text-align: center
   }
   .hero__title-bone {
-    right: 3%
+    right: 1%;
+    top: 20%
   }
   .hero__actions {
     justify-content: center
@@ -615,6 +911,12 @@ body {
   }
   .what__label {
     font-size: 1.625rem
+  }
+  .buy-list__list {
+    gap: 3.125rem
+  }
+  .item-buy__swap-text {
+    font-size: .875rem
   }
 }
 @media (max-width:47.99875em) {
@@ -724,6 +1026,15 @@ body {
   .header__logo {
     max-width: 5rem
   }
+  .buy-list__list {
+    grid-template-columns: 1fr
+  }
+  .item-buy__swap-title {
+    text-align: center
+  }
+  .item-buy__swap-text {
+    text-align: center
+  }
 }
 @media (max-width:47.99875em) and (max-width:20em) {
   .menu__body::after {
@@ -811,6 +1122,66 @@ body {
   @supports not (padding-bottom:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
     .page__what {
       padding-bottom: calc(1.875rem + 2.8125 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (padding-bottom:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
+    .page__buy {
+      padding-bottom: clamp(1.875rem ,.9276315789rem + 4.7368421053vw ,4.6875rem)
+    }
+  }
+  @supports not (padding-bottom:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
+    .page__buy {
+      padding-bottom: calc(1.875rem + 2.8125 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (padding-top:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
+    .page__booswap {
+      padding-top: clamp(1.875rem ,.9276315789rem + 4.7368421053vw ,4.6875rem)
+    }
+  }
+  @supports not (padding-top:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
+    .page__booswap {
+      padding-top: calc(1.875rem + 2.8125 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (padding-bottom:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
+    .page__booswap {
+      padding-bottom: clamp(1.875rem ,.9276315789rem + 4.7368421053vw ,4.6875rem)
+    }
+  }
+  @supports not (padding-bottom:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
+    .page__booswap {
+      padding-bottom: calc(1.875rem + 2.8125 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (margin-bottom:clamp(3.125rem ,2.0723684211rem + 5.2631578947vw ,6.25rem)) {
+    .strip--top-left {
+      margin-bottom: clamp(3.125rem ,2.0723684211rem + 5.2631578947vw ,6.25rem)
+    }
+  }
+  @supports not (margin-bottom:clamp(3.125rem ,2.0723684211rem + 5.2631578947vw ,6.25rem)) {
+    .strip--top-left {
+      margin-bottom: calc(3.125rem + 3.125 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (max-width:clamp(3.125rem ,-1.0855263158rem + 21.0526315789vw ,15.625rem)) {
+    .img-decor {
+      max-width: clamp(3.125rem ,-1.0855263158rem + 21.0526315789vw ,15.625rem)
+    }
+  }
+  @supports not (max-width:clamp(3.125rem ,-1.0855263158rem + 21.0526315789vw ,15.625rem)) {
+    .img-decor {
+      max-width: calc(3.125rem + 12.5 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (font-size:clamp(2.25rem ,0.3973684211rem + 9.2631578947vw ,7.75rem)) {
+    .subtitle {
+      font-size: clamp(2.25rem ,.3973684211rem + 9.2631578947vw ,7.75rem)
+    }
+  }
+  @supports not (font-size:clamp(2.25rem ,0.3973684211rem + 9.2631578947vw ,7.75rem)) {
+    .subtitle {
+      font-size: calc(2.25rem + 5.5 * (100vw - 20rem)/ 59.375)
     }
   }
   @supports (column-gup:clamp(3.125rem ,2.0723684211rem + 5.2631578947vw ,6.25rem)) {
@@ -957,14 +1328,14 @@ body {
       margin-top: calc(-1.25rem + -1.25 * (100vw - 20rem)/ 59.375)
     }
   }
-  @supports (margin-right:clamp(-1.5625rem ,0.1085526316rem + -2.1052631579vw ,-0.3125rem)) {
+  @supports (margin-right:clamp(-2.1875rem ,0.3190789474rem + -3.1578947368vw ,-0.3125rem)) {
     .what__decor {
-      margin-right: clamp(-1.5625rem ,.1085526316rem + -2.1052631579vw ,-.3125rem)
+      margin-right: clamp(-2.1875rem ,.3190789474rem + -3.1578947368vw ,-.3125rem)
     }
   }
-  @supports not (margin-right:clamp(-1.5625rem ,0.1085526316rem + -2.1052631579vw ,-0.3125rem)) {
+  @supports not (margin-right:clamp(-2.1875rem ,0.3190789474rem + -3.1578947368vw ,-0.3125rem)) {
     .what__decor {
-      margin-right: calc(-.3125rem + -1.25 * (100vw - 20rem)/ 59.375)
+      margin-right: calc(-.3125rem + -1.875 * (100vw - 20rem)/ 59.375)
     }
   }
   @supports (width:clamp(4.6875rem ,3.3190789474rem + 6.8421052632vw ,8.75rem)) {
@@ -1047,6 +1418,158 @@ body {
       padding-right: calc(.625rem + 1.875 * (100vw - 20rem)/ 59.375)
     }
   }
+  @supports (padding-top:clamp(2.1875rem ,0.8190789474rem + 6.8421052632vw ,6.25rem)) {
+    .buy-list {
+      padding-top: clamp(2.1875rem ,.8190789474rem + 6.8421052632vw ,6.25rem)
+    }
+  }
+  @supports not (padding-top:clamp(2.1875rem ,0.8190789474rem + 6.8421052632vw ,6.25rem)) {
+    .buy-list {
+      padding-top: calc(2.1875rem + 4.0625 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (padding-top:clamp(3.125rem ,2.3881578947rem + 3.6842105263vw ,5.3125rem)) {
+    .item-buy {
+      padding-top: clamp(3.125rem ,2.3881578947rem + 3.6842105263vw ,5.3125rem)
+    }
+  }
+  @supports not (padding-top:clamp(3.125rem ,2.3881578947rem + 3.6842105263vw ,5.3125rem)) {
+    .item-buy {
+      padding-top: calc(3.125rem + 2.1875 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (padding-bottom:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
+    .item-buy {
+      padding-bottom: clamp(1.875rem ,.9276315789rem + 4.7368421053vw ,4.6875rem)
+    }
+  }
+  @supports not (padding-bottom:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
+    .item-buy {
+      padding-bottom: calc(1.875rem + 2.8125 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (padding-left:clamp(0.9375rem ,0.5164473684rem + 2.1052631579vw ,2.1875rem)) {
+    .item-buy {
+      padding-left: clamp(.9375rem ,.5164473684rem + 2.1052631579vw ,2.1875rem)
+    }
+  }
+  @supports not (padding-left:clamp(0.9375rem ,0.5164473684rem + 2.1052631579vw ,2.1875rem)) {
+    .item-buy {
+      padding-left: calc(.9375rem + 1.25 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (padding-right:clamp(0.9375rem ,0.5164473684rem + 2.1052631579vw ,2.1875rem)) {
+    .item-buy {
+      padding-right: clamp(.9375rem ,.5164473684rem + 2.1052631579vw ,2.1875rem)
+    }
+  }
+  @supports not (padding-right:clamp(0.9375rem ,0.5164473684rem + 2.1052631579vw ,2.1875rem)) {
+    .item-buy {
+      padding-right: calc(.9375rem + 1.25 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (max-width:clamp(4.6875rem ,3.0032894737rem + 8.4210526316vw ,9.6875rem)) {
+    .item-buy__icon {
+      max-width: clamp(4.6875rem ,3.0032894737rem + 8.4210526316vw ,9.6875rem)
+    }
+  }
+  @supports not (max-width:clamp(4.6875rem ,3.0032894737rem + 8.4210526316vw ,9.6875rem)) {
+    .item-buy__icon {
+      max-width: calc(4.6875rem + 5 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (max-width:clamp(4.6875rem ,4.1611842105rem + 2.6315789474vw ,6.25rem)) {
+    .item-buy__number {
+      max-width: clamp(4.6875rem ,4.1611842105rem + 2.6315789474vw ,6.25rem)
+    }
+  }
+  @supports not (max-width:clamp(4.6875rem ,4.1611842105rem + 2.6315789474vw ,6.25rem)) {
+    .item-buy__number {
+      max-width: calc(4.6875rem + 1.5625 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (margin-bottom:clamp(1.875rem ,-0.0197368421rem + 9.4736842105vw ,7.5rem)) {
+    .booswap__strip {
+      margin-bottom: clamp(1.875rem ,-.0197368421rem + 9.4736842105vw ,7.5rem)
+    }
+  }
+  @supports not (margin-bottom:clamp(1.875rem ,-0.0197368421rem + 9.4736842105vw ,7.5rem)) {
+    .booswap__strip {
+      margin-bottom: calc(1.875rem + 5.625 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (margin-top:clamp(3.4375rem ,5.1085526316rem + -2.1052631579vw ,4.6875rem)) {
+    .booswap {
+      margin-top: clamp(3.4375rem ,5.1085526316rem + -2.1052631579vw ,4.6875rem)
+    }
+  }
+  @supports not (margin-top:clamp(3.4375rem ,5.1085526316rem + -2.1052631579vw ,4.6875rem)) {
+    .booswap {
+      margin-top: calc(4.6875rem + -1.25 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (margin-bottom:clamp(3.4375rem ,5.1085526316rem + -2.1052631579vw ,4.6875rem)) {
+    .booswap {
+      margin-bottom: clamp(3.4375rem ,5.1085526316rem + -2.1052631579vw ,4.6875rem)
+    }
+  }
+  @supports not (margin-bottom:clamp(3.4375rem ,5.1085526316rem + -2.1052631579vw ,4.6875rem)) {
+    .booswap {
+      margin-bottom: calc(4.6875rem + -1.25 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (max-width:clamp(4.6875rem ,0.5822368421rem + 20.5263157895vw ,16.875rem)) {
+    .booswap img:nth-child(2) {
+      max-width: clamp(4.6875rem ,.5822368421rem + 20.5263157895vw ,16.875rem)
+    }
+  }
+  @supports not (max-width:clamp(4.6875rem ,0.5822368421rem + 20.5263157895vw ,16.875rem)) {
+    .booswap img:nth-child(2) {
+      max-width: calc(4.6875rem + 12.1875 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (max-width:clamp(4.6875rem ,0.5822368421rem + 20.5263157895vw ,16.875rem)) {
+    .booswap img:nth-child(3) {
+      max-width: clamp(4.6875rem ,.5822368421rem + 20.5263157895vw ,16.875rem)
+    }
+  }
+  @supports not (max-width:clamp(4.6875rem ,0.5822368421rem + 20.5263157895vw ,16.875rem)) {
+    .booswap img:nth-child(3) {
+      max-width: calc(4.6875rem + 12.1875 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (max-width:clamp(4.6875rem ,0.5822368421rem + 20.5263157895vw ,16.875rem)) {
+    .booswap img:nth-child(4) {
+      max-width: clamp(4.6875rem ,.5822368421rem + 20.5263157895vw ,16.875rem)
+    }
+  }
+  @supports not (max-width:clamp(4.6875rem ,0.5822368421rem + 20.5263157895vw ,16.875rem)) {
+    .booswap img:nth-child(4) {
+      max-width: calc(4.6875rem + 12.1875 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (max-width:clamp(4.6875rem ,0.5822368421rem + 20.5263157895vw ,16.875rem)) {
+    .booswap img:nth-child(5) {
+      max-width: clamp(4.6875rem ,.5822368421rem + 20.5263157895vw ,16.875rem)
+    }
+  }
+  @supports not (max-width:clamp(4.6875rem ,0.5822368421rem + 20.5263157895vw ,16.875rem)) {
+    .booswap img:nth-child(5) {
+      max-width: calc(4.6875rem + 12.1875 * (100vw - 20rem)/ 59.375)
+    }
+  }
+}
+@media (min-width:61.24875em) and (max-width:77.5em) {
+  @supports (margin-top:clamp(-7.5rem ,28.2664797996rem + -46.1502965157vw ,0.0000000625rem)) {
+    .strip--top-left {
+      margin-top: clamp(-7.5rem ,28.2664797996rem + -46.1502965157vw ,.0000000625rem)
+    }
+  }
+  @supports not (margin-top:clamp(-7.5rem ,28.2664797996rem + -46.1502965157vw ,0.0000000625rem)) {
+    .strip--top-left {
+      margin-top: calc(.0000000625rem + -7.5000000625 * (100vw - 61.24875rem)/ 16.25125)
+    }
+  }
 }
 @media (min-width:48.06125em) and (max-width:77.5em) {
   @supports (padding-top:clamp(0.625rem ,-9.5786537727rem + 21.230520997vw ,6.875rem)) {
@@ -1067,6 +1590,26 @@ body {
   @supports not (font-size:clamp(1.625rem ,-1.742205745rem + 7.006071929vw ,3.6875rem)) {
     .what__label {
       font-size: calc(1.625rem + 2.0625 * (100vw - 48.06125rem)/ 29.43875)
+    }
+  }
+  @supports (gap:clamp(3.125rem ,-12.180480659rem + 31.8457814955vw ,12.5rem)) {
+    .buy-list__list {
+      gap: clamp(3.125rem ,-12.180480659rem + 31.8457814955vw ,12.5rem)
+    }
+  }
+  @supports not (gap:clamp(3.125rem ,-12.180480659rem + 31.8457814955vw ,12.5rem)) {
+    .buy-list__list {
+      gap: calc(3.125rem + 9.375 * (100vw - 48.06125rem)/ 29.43875)
+    }
+  }
+  @supports (font-size:clamp(0.875rem ,0.2627807736rem + 1.2738312598vw ,1.25rem)) {
+    .item-buy__swap-text {
+      font-size: clamp(.875rem ,.2627807736rem + 1.2738312598vw ,1.25rem)
+    }
+  }
+  @supports not (font-size:clamp(0.875rem ,0.2627807736rem + 1.2738312598vw ,1.25rem)) {
+    .item-buy__swap-text {
+      font-size: calc(.875rem + .375 * (100vw - 48.06125rem)/ 29.43875)
     }
   }
 }
