--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,10 @@ body {
   position: relative;
   z-index: 5
 }
+.footer__copy {
+  opacity: .2;
+  font-size: 1.25rem
+}
 .footer__image-dog {
   height: 120%;
   position: absolute;
@@ -380,7 +384,8 @@ body {
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: center
+  align-items: center;
+  z-index: 5
 }
 .hero__image {
   aspect-ratio: 387/456;
@@ -391,12 +396,15 @@ body {
 }
 .hero__decor {
   position: absolute;
-  z-index: 5;
+  z-index: 2;
   width: 100%;
   height: 100%;
   aspect-ratio: 1920/1300;
   top: 0;
   left: 0
+}
+.hero__social {
+  margin-top: -7.5rem
 }
 .social__list {
   display: flex;
@@ -457,8 +465,18 @@ body {
   position: absolute;
   aspect-ratio: 1/1
 }
-.what__blcok {
-  padding-top: 1.5625rem
+.what__blok {
+  padding-top: 1.5625rem;
+  -webkit-transform: translate(0,10%);
+  transform: translate(0,10%);
+  opacity: 0;
+  transition: all .2s
+}
+.what__blok._watcher-view {
+  transition: all .8s ease .5s;
+  -webkit-transform: translate(0,0);
+  transform: translate(0,0);
+  opacity: 1
 }
 .what__text {
   position: relative;
@@ -493,6 +511,54 @@ body {
   border-radius: 1.9375rem;
   border: 5px solid #000;
   box-shadow: -11px -9px 4px 0 rgba(0,0,0,.25) inset,7.667px 7.667px 0 0 #000
+}
+.item-buy:nth-child(1) {
+  -webkit-transform: translate(-100%,-100%);
+  transform: translate(-100%,-100%);
+  opacity: 0;
+  transition: all .2s
+}
+.item-buy:nth-child(1)._watcher-view {
+  transition: all .8s ease .3s;
+  -webkit-transform: translate(0,0);
+  transform: translate(0,0);
+  opacity: 1
+}
+.item-buy:nth-child(2) {
+  -webkit-transform: translate(100%,-100%);
+  transform: translate(100%,-100%);
+  opacity: 0;
+  transition: all .2s
+}
+.item-buy:nth-child(2)._watcher-view {
+  transition: all .8s ease .3s;
+  -webkit-transform: translate(0,0);
+  transform: translate(0,0);
+  opacity: 1
+}
+.item-buy:nth-child(3) {
+  -webkit-transform: translate(-100%,100%);
+  transform: translate(-100%,100%);
+  opacity: 0;
+  transition: all .2s
+}
+.item-buy:nth-child(3)._watcher-view {
+  transition: all .8s ease .3s;
+  -webkit-transform: translate(0,0);
+  transform: translate(0,0);
+  opacity: 1
+}
+.item-buy:nth-child(4) {
+  -webkit-transform: translate(100%,100%);
+  transform: translate(100%,100%);
+  opacity: 0;
+  transition: all .2s
+}
+.item-buy:nth-child(4)._watcher-view {
+  transition: all .8s ease .3s;
+  -webkit-transform: translate(0,0);
+  transform: translate(0,0);
+  opacity: 1
 }
 .item-buy__title {
   font-family: "Work Sans";
@@ -530,6 +596,10 @@ body {
   font-weight: 600;
   line-height: 1.4
 }
+.item-buy__bone-rotate {
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg)
+}
 .item-buy__swap-text {
   color: #000;
   opacity: .5;
@@ -556,7 +626,17 @@ body {
 .booswap__img-content {
   max-width: 37.3125rem;
   aspect-ratio: 597/959;
-  margin: auto
+  margin: auto;
+  -webkit-transform: translate(0,10%);
+  transform: translate(0,10%);
+  opacity: 0;
+  transition: all .2s
+}
+.booswap__img-content._watcher-view {
+  transition: all .8s ease .3s;
+  -webkit-transform: translate(0,0);
+  transform: translate(0,0);
+  opacity: 1
 }
 .booswap img:nth-child(1) {
   position: relative;
@@ -600,6 +680,30 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: end
+}
+.tokenomics__item:nth-child(1) {
+  -webkit-transform: translate(-100%);
+  transform: translate(-100%);
+  opacity: 0;
+  transition: all .2s
+}
+.tokenomics__item:nth-child(1)._watcher-view {
+  transition: all .8s ease .3s;
+  -webkit-transform: translate(0,0);
+  transform: translate(0,0);
+  opacity: 1
+}
+.tokenomics__item:nth-child(2) {
+  -webkit-transform: translate(100%);
+  transform: translate(100%);
+  opacity: 0;
+  transition: all .2s
+}
+.tokenomics__item:nth-child(2)._watcher-view {
+  transition: all .8s ease .3s;
+  -webkit-transform: translate(0,0);
+  transform: translate(0,0);
+  opacity: 1
 }
 .item-tokenomics {
   background-color: #fff;
@@ -665,6 +769,12 @@ body {
   }
 }
 @media (min-width:77.5em) {
+  .page__booswap {
+    padding-top: 9.375rem
+  }
+  .page__tokenomics {
+    padding-bottom: 9.375rem
+  }
   .strip {
     margin-top: -9.375rem
   }
@@ -726,10 +836,10 @@ body {
     padding-bottom: 4.6875rem
   }
   .page__buy {
-    padding-bottom: 4.6875rem
-  }
-  .page__booswap {
     padding-top: 4.6875rem
+  }
+  .page__buy {
+    padding-bottom: 4.6875rem
   }
   .page__booswap {
     padding-bottom: 4.6875rem
@@ -737,8 +847,11 @@ body {
   .page__tokenomics {
     padding-top: 4.6875rem
   }
-  .page__tokenomics {
-    padding-bottom: 9.375rem
+  .strip--add-pb {
+    margin-top: -2.5rem
+  }
+  .strip--add-pb {
+    margin-bottom: 10.625rem
   }
   .img-decor {
     max-width: 15.625rem
@@ -799,10 +912,10 @@ body {
   .what__image-decor-2 {
     width: 14.375rem
   }
-  .what__blcok {
+  .what__blok {
     padding-left: 1.5625rem
   }
-  .what__blcok {
+  .what__blok {
     padding-right: 1.5625rem
   }
   .what__text {
@@ -895,10 +1008,10 @@ body {
     padding-bottom: 1.875rem
   }
   .page__buy {
-    padding-bottom: 1.875rem
+    padding-top: .0000000625rem
   }
-  .page__booswap {
-    padding-top: 1.875rem
+  .page__buy {
+    padding-bottom: 1.875rem
   }
   .page__booswap {
     padding-bottom: 1.875rem
@@ -906,8 +1019,11 @@ body {
   .page__tokenomics {
     padding-top: 1.875rem
   }
-  .page__tokenomics {
-    padding-bottom: 4.375rem
+  .strip--add-pb {
+    margin-top: -1.875rem
+  }
+  .strip--add-pb {
+    margin-bottom: 1.875rem
   }
   .img-decor {
     max-width: 3.125rem
@@ -968,10 +1084,10 @@ body {
   .what__image-decor-2 {
     width: 6.25rem
   }
-  .what__blcok {
+  .what__blok {
     padding-left: .1875rem
   }
-  .what__blcok {
+  .what__blok {
     padding-right: .1875rem
   }
   .what__text {
@@ -1079,7 +1195,9 @@ body {
     max-width: 100%
   }
   .footer__image-dog {
-    display: none
+    height: 25%;
+    top: 9%;
+    right: -40%
   }
   .footer__image-decor {
     display: none
@@ -1111,7 +1229,7 @@ body {
     margin-top: .0000000625rem
   }
   .strip {
-    margin-bottom: 3.125rem
+    margin-bottom: 1.875rem
   }
   .strip--top-left {
     margin-top: .0000000625rem
@@ -1141,6 +1259,12 @@ body {
   }
 }
 @media (max-width:48.06125em) {
+  .page__booswap {
+    padding-top: .0000000625rem
+  }
+  .page__tokenomics {
+    padding-bottom: 4.375rem
+  }
   .what__img {
     padding-top: .625rem
   }
@@ -1264,6 +1388,9 @@ body {
   .header__logo {
     max-width: 5rem
   }
+  .footer__image-dog {
+    height: 15%
+  }
   .buy-list__list {
     grid-template-columns: 1fr
   }
@@ -1288,6 +1415,9 @@ body {
   .footer__text {
     max-width: 100%;
     margin: auto
+  }
+  .footer__image-dog {
+    height: 13%
   }
 }
 @media (max-width:47.99875em) and (min-width:79.375em) {
@@ -1408,6 +1538,16 @@ body {
       padding-bottom: calc(1.875rem + 2.8125 * (100vw - 20rem)/ 59.375)
     }
   }
+  @supports (padding-top:clamp(0.0000000625rem ,-1.5789472849rem + 7.8947367368vw ,4.6875rem)) {
+    .page__buy {
+      padding-top: clamp(.0000000625rem ,-1.5789472849rem + 7.8947367368vw ,4.6875rem)
+    }
+  }
+  @supports not (padding-top:clamp(0.0000000625rem ,-1.5789472849rem + 7.8947367368vw ,4.6875rem)) {
+    .page__buy {
+      padding-top: calc(.0000000625rem + 4.6874999375 * (100vw - 20rem)/ 59.375)
+    }
+  }
   @supports (padding-bottom:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
     .page__buy {
       padding-bottom: clamp(1.875rem ,.9276315789rem + 4.7368421053vw ,4.6875rem)
@@ -1418,16 +1558,6 @@ body {
       padding-bottom: calc(1.875rem + 2.8125 * (100vw - 20rem)/ 59.375)
     }
   }
-  @supports (padding-top:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
-    .page__booswap {
-      padding-top: clamp(1.875rem ,.9276315789rem + 4.7368421053vw ,4.6875rem)
-    }
-  }
-  @supports not (padding-top:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
-    .page__booswap {
-      padding-top: calc(1.875rem + 2.8125 * (100vw - 20rem)/ 59.375)
-    }
-  }
   @supports (padding-bottom:clamp(1.875rem ,0.9276315789rem + 4.7368421053vw ,4.6875rem)) {
     .page__booswap {
       padding-bottom: clamp(1.875rem ,.9276315789rem + 4.7368421053vw ,4.6875rem)
@@ -1448,14 +1578,24 @@ body {
       padding-top: calc(1.875rem + 2.8125 * (100vw - 20rem)/ 59.375)
     }
   }
-  @supports (padding-bottom:clamp(4.375rem ,2.6907894737rem + 8.4210526316vw ,9.375rem)) {
-    .page__tokenomics {
-      padding-bottom: clamp(4.375rem ,2.6907894737rem + 8.4210526316vw ,9.375rem)
+  @supports (margin-top:clamp(-2.5rem ,-1.6644736842rem + -1.0526315789vw ,-1.875rem)) {
+    .strip--add-pb {
+      margin-top: clamp(-2.5rem ,-1.6644736842rem + -1.0526315789vw ,-1.875rem)
     }
   }
-  @supports not (padding-bottom:clamp(4.375rem ,2.6907894737rem + 8.4210526316vw ,9.375rem)) {
-    .page__tokenomics {
-      padding-bottom: calc(4.375rem + 5 * (100vw - 20rem)/ 59.375)
+  @supports not (margin-top:clamp(-2.5rem ,-1.6644736842rem + -1.0526315789vw ,-1.875rem)) {
+    .strip--add-pb {
+      margin-top: calc(-1.875rem + -.625 * (100vw - 20rem)/ 59.375)
+    }
+  }
+  @supports (margin-bottom:clamp(1.875rem ,-1.0723684211rem + 14.7368421053vw ,10.625rem)) {
+    .strip--add-pb {
+      margin-bottom: clamp(1.875rem ,-1.0723684211rem + 14.7368421053vw ,10.625rem)
+    }
+  }
+  @supports not (margin-bottom:clamp(1.875rem ,-1.0723684211rem + 14.7368421053vw ,10.625rem)) {
+    .strip--add-pb {
+      margin-bottom: calc(1.875rem + 8.75 * (100vw - 20rem)/ 59.375)
     }
   }
   @supports (max-width:clamp(3.125rem ,-1.0855263158rem + 21.0526315789vw ,15.625rem)) {
@@ -1653,22 +1793,22 @@ body {
     }
   }
   @supports (padding-left:clamp(0.1875rem ,-0.2756578947rem + 2.3157894737vw ,1.5625rem)) {
-    .what__blcok {
+    .what__blok {
       padding-left: clamp(.1875rem ,-.2756578947rem + 2.3157894737vw ,1.5625rem)
     }
   }
   @supports not (padding-left:clamp(0.1875rem ,-0.2756578947rem + 2.3157894737vw ,1.5625rem)) {
-    .what__blcok {
+    .what__blok {
       padding-left: calc(.1875rem + 1.375 * (100vw - 20rem)/ 59.375)
     }
   }
   @supports (padding-right:clamp(0.1875rem ,-0.2756578947rem + 2.3157894737vw ,1.5625rem)) {
-    .what__blcok {
+    .what__blok {
       padding-right: clamp(.1875rem ,-.2756578947rem + 2.3157894737vw ,1.5625rem)
     }
   }
   @supports not (padding-right:clamp(0.1875rem ,-0.2756578947rem + 2.3157894737vw ,1.5625rem)) {
-    .what__blcok {
+    .what__blok {
       padding-right: calc(.1875rem + 1.375 * (100vw - 20rem)/ 59.375)
     }
   }
@@ -1893,49 +2033,27 @@ body {
     }
   }
 }
-@media (min-width:61.24875em) and (max-width:77.5em) {
-  @supports (margin-top:clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,0.0000000625rem)) {
-    .strip {
-      margin-top: clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,.0000000625rem)
-    }
-  }
-  @supports not (margin-top:clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,0.0000000625rem)) {
-    .strip {
-      margin-top: calc(.0000000625rem + -9.3750000625 * (100vw - 61.24875rem)/ 16.25125)
-    }
-  }
-  @supports (margin-bottom:clamp(3.125rem ,-8.6526997923rem + 19.2292900546vw ,6.25rem)) {
-    .strip {
-      margin-bottom: clamp(3.125rem ,-8.6526997923rem + 19.2292900546vw ,6.25rem)
-    }
-  }
-  @supports not (margin-bottom:clamp(3.125rem ,-8.6526997923rem + 19.2292900546vw ,6.25rem)) {
-    .strip {
-      margin-bottom: calc(3.125rem + 3.125 * (100vw - 61.24875rem)/ 16.25125)
-    }
-  }
-  @supports (margin-top:clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,0.0000000625rem)) {
-    .strip--top-left {
-      margin-top: clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,.0000000625rem)
-    }
-  }
-  @supports not (margin-top:clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,0.0000000625rem)) {
-    .strip--top-left {
-      margin-top: calc(.0000000625rem + -9.3750000625 * (100vw - 61.24875rem)/ 16.25125)
-    }
-  }
-  @supports (margin-bottom:clamp(3.125rem ,-8.6526997923rem + 19.2292900546vw ,6.25rem)) {
-    .strip--top-left {
-      margin-bottom: clamp(3.125rem ,-8.6526997923rem + 19.2292900546vw ,6.25rem)
-    }
-  }
-  @supports not (margin-bottom:clamp(3.125rem ,-8.6526997923rem + 19.2292900546vw ,6.25rem)) {
-    .strip--top-left {
-      margin-bottom: calc(3.125rem + 3.125 * (100vw - 61.24875rem)/ 16.25125)
-    }
-  }
-}
 @media (min-width:48.06125em) and (max-width:77.5em) {
+  @supports (padding-top:clamp(0.0000000625rem ,-15.3054804945rem + 31.8457812832vw ,9.375rem)) {
+    .page__booswap {
+      padding-top: clamp(.0000000625rem ,-15.3054804945rem + 31.8457812832vw ,9.375rem)
+    }
+  }
+  @supports not (padding-top:clamp(0.0000000625rem ,-15.3054804945rem + 31.8457812832vw ,9.375rem)) {
+    .page__booswap {
+      padding-top: calc(.0000000625rem + 9.3749999375 * (100vw - 48.06125rem)/ 29.43875)
+    }
+  }
+  @supports (padding-bottom:clamp(4.375rem ,-3.7879230181rem + 16.9844167976vw ,9.375rem)) {
+    .page__tokenomics {
+      padding-bottom: clamp(4.375rem ,-3.7879230181rem + 16.9844167976vw ,9.375rem)
+    }
+  }
+  @supports not (padding-bottom:clamp(4.375rem ,-3.7879230181rem + 16.9844167976vw ,9.375rem)) {
+    .page__tokenomics {
+      padding-bottom: calc(4.375rem + 5 * (100vw - 48.06125rem)/ 29.43875)
+    }
+  }
   @supports (padding-top:clamp(0.625rem ,-9.5786537727rem + 21.230520997vw ,6.875rem)) {
     .what__img {
       padding-top: clamp(.625rem ,-9.5786537727rem + 21.230520997vw ,6.875rem)
@@ -1984,6 +2102,48 @@ body {
   @supports not (max-width:clamp(9.375rem ,-0.8286537727rem + 21.230520997vw ,15.625rem)) {
     .item-tokenomics__decor {
       max-width: calc(9.375rem + 6.25 * (100vw - 48.06125rem)/ 29.43875)
+    }
+  }
+}
+@media (min-width:61.24875em) and (max-width:77.5em) {
+  @supports (margin-top:clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,0.0000000625rem)) {
+    .strip {
+      margin-top: clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,.0000000625rem)
+    }
+  }
+  @supports not (margin-top:clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,0.0000000625rem)) {
+    .strip {
+      margin-top: calc(.0000000625rem + -9.3750000625 * (100vw - 61.24875rem)/ 16.25125)
+    }
+  }
+  @supports (margin-bottom:clamp(1.875rem ,-14.6137797093rem + 26.9210060765vw ,6.25rem)) {
+    .strip {
+      margin-bottom: clamp(1.875rem ,-14.6137797093rem + 26.9210060765vw ,6.25rem)
+    }
+  }
+  @supports not (margin-bottom:clamp(1.875rem ,-14.6137797093rem + 26.9210060765vw ,6.25rem)) {
+    .strip {
+      margin-bottom: calc(1.875rem + 4.375 * (100vw - 61.24875rem)/ 16.25125)
+    }
+  }
+  @supports (margin-top:clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,0.0000000625rem)) {
+    .strip--top-left {
+      margin-top: clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,.0000000625rem)
+    }
+  }
+  @supports not (margin-top:clamp(-9.375rem ,35.333099675rem + -57.6878705484vw ,0.0000000625rem)) {
+    .strip--top-left {
+      margin-top: calc(.0000000625rem + -9.3750000625 * (100vw - 61.24875rem)/ 16.25125)
+    }
+  }
+  @supports (margin-bottom:clamp(3.125rem ,-8.6526997923rem + 19.2292900546vw ,6.25rem)) {
+    .strip--top-left {
+      margin-bottom: clamp(3.125rem ,-8.6526997923rem + 19.2292900546vw ,6.25rem)
+    }
+  }
+  @supports not (margin-bottom:clamp(3.125rem ,-8.6526997923rem + 19.2292900546vw ,6.25rem)) {
+    .strip--top-left {
+      margin-bottom: calc(3.125rem + 3.125 * (100vw - 61.24875rem)/ 16.25125)
     }
   }
 }
